--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body {
 
 .showcase-area {
     height: 100vh;
-    background-image: url('../img/WhatsApp\ Image\ 2024-01-24\ at\ 14.32.37.jpeg');
+    background-image: url('../img/bg1.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
